# music-organizer

./: README.md  main.py  models.py  pyproject.toml  requirements.txt  setup.py
api/: shazam.py
files/: util.py
models/: track.py
service/: __init__.py  index.py  provider.py
