[tool.poetry]
name = "music-organizer"
version = "0.1.0"
description = "Project for recognize automatically and organize music folders"
authors = ["Fabio Scotto di Santolo <fabio.scottodisantolo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
shazamio = "^0.6.0"
python-magic = "^0.4.27"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
